--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    not_closed= []\n",
-    "    if !restaurants['is_closed']"
+    "    if !restaurants['is_closed']:\n",
+    "        "
    ]
   },
   {
