--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    not_closed= []\n",
-    "   \n",
+    "    for open in restaurants\n",
     "        "
    ]
   },
