--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    not_closed= []\n",
-    "    for open in restaurants\n",
+    "    for open in restaurants:\n",
+    "        if \n",
     "        "
    ]
   },
