Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,8 +289,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    not_closed= []\n",
-    "    for open in restaurants:\n",
-    "        if \n",
+    "    for restaurant in restaurants:\n",
+    "        if restaurant\n",
     "        "
    ]
   },
