--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
     "    not_closed= []\n",
     "    for restaurant in restaurants:\n",
     "        if !restaurant['is_closed']:\n",
-    "            not_closed.append(rest)\n",
+    "            not_closed.append(restaunt)\n",
+    "    re\n",
     "        "
    ]
   },
